# -ffmpeg-qt-sdl2-

./: AudioFFmpeg.cpp  AudioFFmpeg.h  CMakeLists.txt  FFmpegInclude.h  README.md  VedioFFmpeg.cpp  VedioFFmpeg.h  Vframe.h  av_clock.h  av_decoder.cpp  av_decoder.h  av_player.cpp  av_player.h  image.qrc  main.cpp  opengl_widget.cpp  opengl_widget.h  qss.h  slider_pts.cpp  slider_pts.h  threadpool.cpp  threadpool.h  widget.cpp  widget.h  widget.ui
